# odeLandscape

./: .gitignore  README.md
ODESolver/: CMakeLists.txt  README.md
ODESolver/R/: generateTable.R
ODESolver/include/: FFBHPar.h  FFLC1Par.h  FFLI1Par.h  NARPar.h  ODESystem.h  PARPar.h  main.h  odePar.h  version.h.in
ODESolver/src/: FFBHPar.cpp  FFLC1Par.cpp  FFLI1Par.cpp  NARPar.cpp  ODESystem.cpp  ODESystem.h  PARPar.cpp  main.cpp  odePar.cpp  odePar.h
ODESolver/tests/: test_FFBH.csv  test_FFL.csv  test_NARPAR.csv
Shiny/: server.R  ui.R
